# demes-forward-ffi

./: .gitmodules  Cargo.toml  build.rs
.github/workflows/: test_ffi.yml
c_example/: CMakeLists.txt  example.c
src/: lib.rs
