[package]
name = "demes-forward-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "cdylib"]

[profile.release]
lto = "fat"
codegen-units=1
panic = "abort"
strip = true

[dependencies]
demes-forward = {version = "~0.1.0", git="https://github.com/molpopgen/demes-forward-rs"}
demes = { version =  ">0.2.1,<0.3.0", git = "https://github.com/molpopgen/demes-rs" }
libc = "~0.2"
