[package]
name = "demes-forward-ffi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cbindgen = "~0.24"

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.release]
lto = "fat"
codegen-units=1
panic = "abort"
strip = true

[dependencies]
demes-forward = {version = "~0.1.0", git="https://github.com/molpopgen/demes-forward-rs"}
libc = "~0.2"
