cmake_minimum_required(VERSION 3.15)
project(c_example LANGUAGES C)

add_subdirectory(corrosion)
corrosion_import_crate(MANIFEST_PATH ../Cargo.toml)
get_filename_component(DEMES_FORWARD_HEADER_LOCATION ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY CACHE)
add_executable(example example.c)
add_dependencies(example cargo-build_demes-forward-ffi)
target_include_directories(example BEFORE PUBLIC ${DEMES_FORWARD_HEADER_LOCATION})
target_link_directories(example PUBLIC ${CMAKE_BINARY_DIR})
target_link_libraries(example PUBLIC demes_forward_ffi)
